hw2/k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-agent
  labels:
    app: log-agent
spec:
  selector:
    matchLabels:
      app: log-agent
  template:
    metadata:
      labels:
        app: log-agent
    spec:
      containers:
      - name: log-agent
        image: busybox
        command: ["/bin/sh"]
        args: ["-c", "while true; do if [ -f /app/logs/app.log ]; then echo '=== Starting log collection ==='; tail -f /app/logs/app.log | while read line; do echo \"$line\" >> /var/log/node-logs/app.log; echo \"$line\"; done; fi; sleep 5; done"]
        volumeMounts:
        - name: app-logs
          mountPath: /app/logs
        - name: node-logs
          mountPath: /var/log/node-logs
      volumes:
      - name: app-logs
        hostPath:
          path: /app/logs
          type: DirectoryOrCreate
      - name: node-logs
        hostPath:
          path: /var/log/node-logs
          type: DirectoryOrCreate
