hw2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
  labels:
    app: custom-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
    spec:
      containers:
      - name: custom-app
        image: custom-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        hostPath:
          path: /app/logs
          type: DirectoryOrCreate
