hw2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-service
spec:
  selector:
    app: custom-app
  sessionAffinity: None
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
